@@ -1,7 +1,8 @@
 2011-02-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
-	* liststore.py, plugins/base/base.py: Added delays for accessing
-	  API.
+	* liststore.py, photosource.py, treeview.py: Added icons on photo
+	  source treeview.
+	* liststore.py, plugins/base/base.py: Added delays for accessing API.
 
 2011-02-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
